Remove fixed background and let it scroll since it requires heavy workarounds on iPhones

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -26,9 +26,9 @@
 }
 
 .hero-image {
-  background: url(../images/hero.png) no-repeat center center fixed;
+  background: url(../images/hero.png) no-repeat center center;
   background-size: cover;
-  height: 65vh;
+  height: 50vh;
   max-height: 800px;
 }
 
